# content-editorial-assistant

./: .containerignore  .env.example  .gitignore  .gitlab-ci-docs.yml  .gitlab-ci-security.yml  .gitlab-ci.yml  ASCIIDOC_IMPLEMENTATION_GUIDE.md  Dockerfile  EDITORIAL_ENHANCEMENTS_IMPLEMENTATION.md  LICENSE  MARKDOWN_IMPLEMENTATION_GUIDE.md  README.md  RapidDoc_Presentation_Slides.md  SETUP_TROUBLESHOOTING.md  analysis_output.json  app.py  brainstorming.md  catalog-info.yaml  complex_output.json  complex_test.adoc  confidence.md  config.py  debug_admonition.py  debug_admonition_pipeline.py  debug_language_rules.py  debug_output.json  debug_paragraph_parsing.py  debug_plurals_issues.py  debug_test.adoc  deploy.sh  docker-compose.yml  evidence_based_rule_development.md  flow.md  gunicorn.conf.py  implementation.adoc  level_2_implementation.adoc  logs.py  machine_learning_feedback_system.md  main.py  main.sh  (+45 more)
.github/workflows/: docs.yml
.light/: light.yaml
.light/local/: config.env  secrets.example.env
.light/preview/: config.env
.light/prod/: config.env
.light/qa/: config.env
.light/stage/: config.env
ambiguity/: __init__.py  ambiguity_rule.py  base_ambiguity_rule.py  types.py
ambiguity/config/: ambiguity_types.yaml
ambiguity/detectors/: __init__.py  fabrication_risk_detector.py  missing_actor_detector.py  missing_actor_detector_refactored.py  pronoun_ambiguity_detector.py  unsupported_claims_detector.py
app/: __init__.py  config.py  events.py  extensions.py
app_modules/: api_routes.py  app_factory.py  fallback_services.py  feedback_storage.py  pdf_report_generator.py  websocket_handlers.py
archive_docs/: BLOCK_LEVEL_REWRITE_IMPLEMENTATION_PLAN.md  DATABASE_IMPLEMENTATION_GUIDE.md  METADATA_ASSISTANT_IMPLEMENTATION_PLAN.md  PHASE_4_PRODUCTION_READINESS_REPORT.md  REWRITER_ENHANCEMENT_ROADMAP.md  brainstorming.md  confidence.md  implementation.adoc  level_2_implementation.adoc  mod_doc_implementation_guide.md  reliability_tuning_guide.md
config/: confidence_gateway_schema.yaml  exceptions.yaml
database/: __init__.py  dao.py  models.py  services.py
deployment/: Containerfile.languagetool  languagetool-deployment.yaml  languagetool-service.yaml
docker/: .dockerignore  DEVELOPER.md  Dockerfile  README.md  build-and-push.sh  docker-compose.yml
docs/: .gitignore  .gitlab-ci.yml  README.md  antora-playbook.yml  antora.yml  convert_adoc_to_md.py  deploy.sh  package-lock.json  package.json
error_consolidation/: __init__.py  consolidator.py  message_merger.py  rule_priority.py  text_span_analyzer.py
legacy/: .dockerignore  .gitignore  .gitlab-ci-security.yml  .gitlab-ci.yml  Dockerfile  README.md  catalog-info.yaml  config.py  debug_spans.py  gunicorn.conf.py  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  rule_refinement.md  slides.html  sonar-project.properties
llamastack/: config.yaml
metadata_assistant/: __init__.py  analytics.py  config.py  core.py  extractors.py  taxonomy_classifier.py
migrations/: README.md  add_feedback_unique_constraint.py  add_metadata_generation_table.py  add_phase3_analytics_tables.py  init_database.py
models/: README.md  __init__.py  config.py  factory.py  model_manager.py  test_models.py  token_config.py
reconstructors/: __init__.py  base_reconstructor.py
rewriter/: __init__.py  assembly_line_config.yaml  assembly_line_rewriter.py  confidence_gateway.py  core.py  document_rewriter.py  evaluators.py  example_selector.py  generators.py  models.py  multi_shot_examples.yaml  output_enforcer.py  processors.py  progress_tracker.py  prompts.py  quality_control_config.py  station_mapper.py  surgical_snippet_processor.py
rules/: __init__.py  ambiguity_rule.py  article_usage_rule.py  base_rule.py  context_inference.py  loader.py  rule_mappings.yaml  second_person_rule.py  sentence_length_rule.py  term_registry.py
scripts/: build-languagetool-image.sh  extract_excerpts.py  gap_analysis.py  load_test_blocks.py  test_sentence_splitting.py  tune_reliability.py
src/: __init__.py  ai_rewriter.py  config.py  format_aware_ai_rewriter.py  format_preserving_processor.py  simple_ai_rewriter.py  style_analyzer.py
static/: preview-lt-design.html
structural_parsing/: __init__.py  format_detector.py  parser_factory.py
style_analyzer/: __init__.py  analysis_modes.py  base_analyzer.py  base_types.py  block_processors.py  core_analyzer.py  error_converters.py  readability_analyzer.py  sentence_analyzer.py  statistics_calculator.py  structural_analyzer.py  suggestion_generator.py
style_guides/: __init__.py  registry.py
templates/: base.html  debug_modules.html  error.html  help_support.html  home.html  index.html  review.html
testing_agent/: README.md  __init__.py  ai_test_analyzer.py  config.py  feature_test_mapper.py  report_generator.py  test_runner.py
tests/: CODE_QUALITY_TESTING.md  __init__.py  comprehensive_test_plan.md  conftest.py  test_ai_rewriter_comprehensive.py  test_ai_rewriting_system.py  test_ambiguity_detection.py  test_ambiguity_detection_comprehensive.py  test_analysis_display_modules.py  test_api_contracts.py  test_app_factory_detailed.py  test_asciidoc_integration.py  test_asciidoc_parser.py  test_block_rewrite_e2e.py  test_code_quality.py  test_concurrency.py  test_config.py  test_consolidation_performance_validation.py  test_core_rewriter.py  test_dita_all_elements.py  test_dita_parser_comprehensive.py  test_document_processing.py  test_end_to_end_consolidation.py  test_enhanced_consolidation.py  test_enhanced_utilities.py  test_error_handling.py  test_evidence_based_abbreviations_rule.py  test_evidence_based_adverbs_only_rule.py  test_evidence_based_anthropomorphism_rule.py  test_evidence_based_templates.py  test_feedback_fixes.py  test_frontend_comprehensive.py  test_hallucination_prevention_demo.py  test_instruction_consolidation.py  test_integration.py  test_integration_scenarios.py  test_markdown_integration.py  test_markdown_parser_comprehensive.py  test_markdown_real_world.py  test_memory_management.py  (+19 more)
validation/: __init__.py  negative_example_validator.py
(+989 files in other folders)
